<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text=""/>

    <LinearLayout
        android:layout_below="@id/display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn7"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn9" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btnAdd"
                android:text="@string/btnAdd"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn4"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn6" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btnMinus"
                android:text="@string/btnMinus"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn1"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn3" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btnDivide"
                android:text="@string/btnDivide"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btnC"
                tools:ignore="ButtonStyle"
                android:onClick="btnClearOnClick"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/btnDot" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btnMultiply"
                android:text="@string/btnMultiply"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResult"
            android:text="="
            android:onClick="btnResultOnClick"/>
    </LinearLayout>

</RelativeLayout>